fix inline math color in dark mode
MathJax (mjx-container) and KaTeX (.katex) elements were not
inheriting the dark mode text color, leaving inline equations black.

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -117,6 +117,14 @@ html[data-theme="dark"] {
   .repo-img-dark {
     display: block;
   }
+
+  mjx-container {
+    color: var(--global-text-color);
+  }
+
+  .katex {
+    color: var(--global-text-color);
+  }
 }
 
 html[data-theme-setting="dark"] {
